update block party image and time info

--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -35,7 +35,7 @@
 	<section class="background-gradient-orange section-ribbon padding-top-20 no-padding-bottom">
 		<div class="row h-center">
 			<div class="col text-center lg-7">
-				<h3 class="text-normal h4">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please email <a href="mailto:microstrategyworld@microstrategy.com" class="text-white">MicroStrategy World</a>.</h3>
+				<h3 class="text-normal h4">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please contact <a href="mailto:microstrategyworld@microstrategy.com" class="text-white">MicroStrategy World</a>.</h3>
 			</div>
 		</div>
 		<div class="row h-left">
@@ -60,7 +60,7 @@
 							</div>
 						</div>
 
-						<a class="cta-button small red carat margin-top-10 reg-link" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 					</div>
 			</div>
 
@@ -93,7 +93,7 @@
 								</div>
 							</div>
 						</div>
-						<a class="cta-button small red carat margin-top-10 reg-link" target="_blank" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
 				</div>
 			</div>
 		</div>
@@ -118,10 +118,9 @@
 
 							<!-- <div class="text-label navy outline">Date and time</div> -->
 							<div class="triangle-group orange margin-top-10">
-								<p><strong>Wednesday, February 6</strong><br>
-								7:30am - 11:30am</p>
+								<p><strong>Monday, January 4</strong></p>
 							</div>
-							<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-36-2c0e177416a0487b95c82069ccaa35ce.aspx?p=36" class="cta-button small orange carat margin-top-10" target="_blank">Learn More</a>
+							<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-36-2c0e177416a0487b95c82069ccaa35ce.aspx?p=36" class="cta-button small orange carat margin-top-10">Learn More</a>
 						</div>
 					</div>
 				</div>
@@ -146,7 +145,7 @@
 		<section class="background-white section-round-dots padding-20">
 			<div class="row h-left z-1">
 				<div class="col md-6">
-					<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3525e5b6348441afb08e845834714df4.jpg">
+					<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/da312152c0b14fe9b229bb31cbe681e8.jpg">
 				</div>
 				<div id="block-party" class="col md-6 z-2">
 					<div class="special-event-box">
@@ -191,10 +190,21 @@
 						<div class="header-box datathon bullet-group">
 							<h3 class="h2 text-medium text-normal">Datathon 2019</h3>
 							<div class="text-label navy margin-top-10">Contest</div>
-							<p>This friendly, team-based competition will be hosted during the first two days of the conference. Teams will compete head-to-head in the main exhibit hall at the center of all the action to create an innovative solution using the MicroStrategy Platform, and will have the the opportunity to show their finished product to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! </p>
-							<div class="triangle-group navy margin-top-10">
-								<p><strong>February 4 &ndash; 5</strong></p>
-							</div>
+							<p>MicroStrategy Datathon 2019 is a friendly, team-based competition hosted during the first two days of the World 2019 conference in Phoenix, AZ. Registered teams will compete head-to-head in the main exhibit hall at the center of all the action using the MicroStrategy platform and a provided data-set to create an innovative solution, with the aid of MicroStrategy Professionals and specialists. Teams will also have the opportunity to show their finished products to everyone in attendance. And the best part? The winning team wins a grand prize of <span class="currency">$</span>10,000! Other prizes will also consist of a “People’s Choice Award” and a “Lone-Wolf Prize”.</p> 
+							<div class="row">
+									<div class="col lg-6">
+										<div class="triangle-group red margin-top-10">
+											<p><strong>Monday, February 4</strong><br>
+											9:00am - 6:00pm</p>
+										</div>
+									</div>
+									<div class="col lg-6">
+										<div class="triangle-group red margin-top-10">
+											<p><strong>Tuesday, February 5</strong><br>
+												9:00am - 6:00pm</p>
+										</div>
+									</div>
+								</div>
 							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button navy carat small margin-top-10">Submit Application</a>
 						</div>
 					</div>
