--- a/HTML/partner-day.html
+++ b/HTML/partner-day.html
@@ -23,9 +23,9 @@
     <section class="background-red section-square-dots">
         <div class="row h-left z-2">
         
-            <div class="col md-5">
+            <div class="col md-6">
                 <div class="bullet-group large">
-                    <h2>Join us at World 2019 Partner Forum on Wednesday, February 6th in [INSERT LOCATION]. You’ll gain insight into today’s dynamic market, see state-of-the-art demos, and hear about extraordinary successes among your peers! Don’t miss out on these sessions built for you.</h2>
+                    <h2>Join us at World 2019 Partner Forum on Monday, February 4th. You’ll gain insight into today’s dynamic market, see state-of-the-art demos, and hear about extraordinary successes among your peers! Don’t miss out on these sessions built for you.</h2>
                 </div>
             </div>
 
@@ -33,38 +33,30 @@
                 <div class="time-block-wrapper col">
                 <div class="agenda-day">
                     <h3>Partner Forum 2019 Agenda</h3>
-                    <h5 class="text-uppercase text-bold">Wednesday, February&nbsp;6</h5>
+                    <h5 class="text-uppercase text-bold">Monday, February&nbsp;4</h5>
                     <div class="time-block">
-                        <div class="time-label">7:30am – 8:00am</div>
-                        Breakfast
+                        <div class="time-label">2:00pm – 2:15pm</div>
+                        Introduction
                     </div>
                     <div class="time-block">
-                        <div class="time-label">8:15am – 8:30am</div>
-                        Opening Remarks
+                        <div class="time-label">2:15pm – 2:45pm</div>
+                        Partner Awards
                     </div>
                     <div class="time-block">
-                        <div class="time-label">8:30am – 9:00am</div>
-                        Standing Out in a Dynamic, Crowded Market
+                        <div class="time-label">2:45pm – 3:45pm</div>
+                        2019 Partner Strategy
                     </div>
                     <div class="time-block">
-                        <div class="time-label">9:00am – 9:30am</div>
-                        Securing Your Customers’ Success
-                    </div>
-                    <div class="time-block">
-                        <div class="time-label">9:30am – 10:00am</div>
-                        Driving Growth with MicroStrategy
-                    </div>
-                    <div class="time-block">
-                        <div class="time-label">10:00am – 10:15am</div>
+                        <div class="time-label">3:45pm – 4:00pm</div>
                         Break
                     </div>
                     <div class="time-block">
-                        <div class="time-label">10:15am – 11:00am</div>
-                        How MicroStrategy Invests in Your Success
+                        <div class="time-label">4:00pm – 4:45pm</div>
+                        Partner Success Plan
                     </div>
                     <div class="time-block">
-                        <div class="time-label">11:00am – 11:30am</div>
-                        Partner Awards
+                        <div class="time-label">4:45pm – 5:00pm</div>
+                        Wrap up
                     </div>
                 </div>
             </div>
