updates in agenda section and venue section

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -49,8 +49,6 @@
 				</div>
 				<div class="cta-home-group">
 					<a class="cta-button large red carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
-					<a href="https://www.cvent.com/c/abstracts/d4332719-f83e-4369-91ef-eb7249af7822" target="_blank" class="cta-button large blue carat">Call
-						for Speakers</a>
 				</div>
 
 
@@ -85,38 +83,25 @@
 			<div class="col md-10 lg-9 xl-8">
 				<div class="bullet-group large">
 					<h2 class="h3 text-uppercase text-bold">About the Conference</h2>
-					<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
-						work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
+					<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
 				</div>
 			</div>
 		</div>
 
 		<div class="row between margin-top-30 z-2">
-			<div class="col md-6 lg-4">
+			<div class="col md-6">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Why Attend</h5>
-					<p>World 2019 will be your best opportunity of the year to hear success stories and network with your peers, get a
-						sneak preview of new features, and gain quick skills with onsite&nbsp;workshops.</p>
+					<p>World 2019 will be your best opportunity of the year to hear success stories and network with your peers, get a sneak preview of new features, and gain quick skills with onsite&nbsp;workshops.</p>
 					<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/d2dcc784ba3c40789ce046fe4f35681c.docx"
-					 class="cta-button orange carat" target="_blank">Justification Letter</a>
+					 class="cta-button orange carat">Justification Letter</a>
 				</div>
 			</div>
-			<div class="col md-6 lg-4">
+			<div class="col md-6">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Sponsorship</h5>
-					<p>MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading
-						companies. If you’re interested in sponsorship or have any questions, contact&nbsp;us.</p>
-					<a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry" class="cta-button orange carat">Contact
-						us</a>
-				</div>
-
-			</div>
-			<div class="col md-6 lg-4">
-				<div class="bullet-group">
-					<h5 class="text-uppercase text-bold">Call for Speakers</h5>
-					<p>Passionate about MicroStrategy? Share your story at World&nbsp;2019.</p>
-					<a href="https://www.cvent.com/c/abstracts/d4332719-f83e-4369-91ef-eb7249af7822" target="_blank" class="cta-button orange carat">Submit
-						a proposal</a>
+					<p>MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading companies. If you’re interested in sponsorship or have any questions, contact&nbsp;us.</p>
+					<a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry" class="cta-button orange carat">Contact us</a>
 				</div>
 
 			</div>
@@ -136,7 +121,7 @@
 					<h2 class="h3 text-uppercase text-bold">Special Events</h2>
 					<p class="h4">Sessions, workshops, and networking opportunities at World 2019.</p>
 					<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-22-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22"
-					 class="cta-button blue carat" target="_blank">See All Events</a>
+					 class="cta-button blue carat">See All Events</a>
 				</div>
 			</div>
 		</div>
@@ -144,25 +129,21 @@
 			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Datathon 2019</h5>
-					<p>Ready to put your skills to the test? Teams will compete head-to-head in the main exhibit hall at the center of
-						all the action to create an innovative solution using the MicroStrategy Platform. The winning team gets&nbsp;<strong>$10,000</strong>.</p>
-					<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button blue carat" target="_blank">Submit
-						application</a>
+					<p>Ready to put your skills to the test? Teams will compete head-to-head in the main exhibit hall at the center of all the action to create an innovative solution using the MicroStrategy Platform. The winning team gets&nbsp;<strong>$10,000</strong>.</p>
+					<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button blue carat">Submit application</a>
 				</div>
 
 			</div>
 			<div class="col md-6 lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Women’s Networking</h5>
-					<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow
-						MicroStrategy customers, partners, and employees—and celebrate at a networking cocktail reception.</p>
+					<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow MicroStrategy customers, partners, and employees—and celebrate at a networking cocktail reception.</p>
 				</div>
 			</div>
 			<div class="col lg-4">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">Education Event: Hands-On Experience With MicroStrategy 2019</h5>
-					<p>This course is ideal for analysts, business users, developers, data scientists, architects, or administrators
-						seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019.</p>
+					<p>This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019.</p>
 					<a class="cta-button blue carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
 				</div>
 			</div>
@@ -180,8 +161,7 @@
 			<div class="col md-10 lg-9 xl-8">
 				<div class="bullet-group large">
 					<h2 class="h3 text-uppercase text-bold">Agenda at a Glance</h2>
-					<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View
-						Full List of&nbsp;Sessions</a>
+					<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View Full List of&nbsp;Sessions</a>
 				</div>
 			</div>
 		</div> <!-- Agenda Section Header-->
@@ -286,8 +266,12 @@
 						Pre-Event Education Courses
 					</div>
 					<div class="time-block">
-						<div class="time-label">Time TBD</div>
+						<div class="time-label">2:00pm - 5:00pm</div>
 						Partner Forum
+					</div>
+					<div class="time-block">
+						<div class="time-label">5:30pm – 7:30pm</div>
+						Welcome Reception
 					</div>
 				</div>
 			</div>
@@ -297,7 +281,7 @@
 					<div class="row collapse-y">
 						<div class="col lg-6">
 							<div class="time-block">
-								<div class="time-label">7:30am – 5:45pm</div>
+								<div class="time-label">7:30am – 6:00pm</div>
 								Conference Registration
 							</div>
 							<div class="time-block">
@@ -309,14 +293,18 @@
 								General Session (speakers to be announced)
 							</div>
 							<div class="time-block">
-								<div class="time-label">Time TBD</div>
+								<div class="time-label">11:30am - 12:15pm</div>
 								Sessions &amp; Workshops
+							</div>
+							<div class="time-block">
+								<div class="time-label">12:30pm – 2:00pm</div>
+								Conference Lunch
 							</div>
 						</div>
 						<div class="col lg-6">
 							<div class="time-block">
-								<div class="time-label">12:30pm – 2:00pm</div>
-								Conference Lunch
+								<div class="time-label">2:00pm – 5:45pm</div>
+								Sessions &amp; Workshops
 							</div>
 							<div class="time-block">
 								<div class="time-label">4:00pm – 6:00pm</div>
@@ -340,7 +328,7 @@
 					<div class="row collapse-y">
 						<div class="col lg-6">
 							<div class="time-block">
-								<div class="time-label">7:30am – 4:30pm</div>
+								<div class="time-label">8:00am – 5:00pm</div>
 								Conference Registration
 							</div>
 							<div class="time-block">
@@ -354,16 +342,16 @@
 						</div>
 						<div class="col lg-6">
 							<div class="time-block">
-								<div class="time-label">Time TBD</div>
+								<div class="time-label">9:00am – 9:45am</div>
 								Sessions &amp; Workshops
 							</div>
 							<div class="time-block">
-								<div class="time-label">12:45pm – 2:00pm</div>
+								<div class="time-label">12:00pm – 2:00pm</div>
 								Conference Lunch
 							</div>
 							<div class="time-block">
-								<div class="time-label">3:00pm – 4:45pm</div>
-								Futures Presentation
+								<div class="time-label">2:00pm – 4:45pm</div>
+								Sessions &amp; Workshops
 							</div>
 						</div>
 					</div>
@@ -395,7 +383,7 @@
 						<div class="col md-4">
 							<div class="time-block">
 								<div class="time-label">Tuesday, February 5</div>
-								8:00am &ndash; 6:00pm
+								8:00am – 6:00pm
 							</div>
 						</div>
 						<div class="col md-4">
@@ -408,8 +396,7 @@
 				</div>
 			</div>
 			<div class="col sm-10 md-8 lg-6">
-				<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View
-					Full List of&nbsp;Sessions</a>
+				<a href="/events/microstrategy-world-2019/custom-17-2c0e177416a0487b95c82069ccaa35ce.aspx" class="cta-button orange carat">View Full List of&nbsp;Sessions</a>
 			</div>
 		</div>
 
@@ -426,9 +413,8 @@
 			<div class="col md-10 lg-9 xl-8">
 				<div class="bullet-group large">
 					<h2 class="h3 text-uppercase text-bold">Venue and Accommodations</h2>
-					<p class="h4">Join us in downtown Phoenix for this year's conference. The event begins February 4th at the Phoenix
-						Convention Center, with accommodations available just across the street at the Hyatt Regency Phoenix.</p>
-					<!-- <a href="" class="cta-button blue carat" target="_blank">Get Directions and Learn More</a> -->
+					<p class="h4">Join us in downtown Phoenix for this year's conference. The event begins February 4th at the Phoenix Convention Center</p>
+					<a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-21-2c0e177416a0487b95c82069ccaa35ce.aspx?p=17" class="cta-button blue carat">Learn More</a>
 				</div>
 			</div>
 		</div>
@@ -436,22 +422,22 @@
 			<div class="col md-10 lg-6 xl-5 z-2">
 				<div class="bullet-group">
 					<h5 class="text-uppercase text-bold">The Phoenix Convention Center</h5>
-					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor
-						International Airport. The center is within walking distance of major convention hotels, shopping, entertainment,
-						sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
-					<a href="https://www.phoenixconventioncenter.com/" class="cta-button red carat small" target="_blank">Venue
-						Website</a>
+					<p>The Phoenix Convention Center is located in the heart of downtown Phoenix and just 4 miles from Sky Harbor International Airport. The center is within walking distance of major convention hotels, shopping, entertainment, sports, theater venues and has its own dedicated stop on the Metro Light Rail line.</p>
+					<a href="https://www.phoenixconventioncenter.com/" class="cta-button red carat small" target="_blank">Venue Website</a>
 				</div>
-				<div class="bullet-group margin-top-40 margin-bottom-40">
-					<h5 class="text-uppercase text-bold">Accommodations</h5>
-					<p>Discounted room blocks for World 2019 attendees are available at the Hyatt Regency Phoenix, located across the
-						street from the conference venue.</p>
-					<a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp" class="cta-button red carat small"
-					 target="_blank">Hotel Website</a>
-					<a href="https://www.hyatt.com/en-US/hotel/arizona/hyatt-regency-phoenix/phxrp?corp_id=G-MIC1" class="cta-button red carat small"
-					 target="_blank">Booking Link</a>
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Sheraton Grand Phoenix</h5>
+					<p>The city's largest hotel, Sheraton Grand Phoenix is a contemporary haven in a prime location. Unpack and unwind in stylish rooms and suites, featuring modern essentials, gorgeous city views and a thoughtful collection of signature amenities.</p>
+					<a class="cta-button red carat large" href="https://www.marriott.com/event-reservations/reservation-link.mi?id=1544552427242&key=GRP&app=resvlink" target="_blank">Book your room online</a>
 				</div>
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Renaissance Phoenix Downtown Hotel</h5>
+					<p>Immerse yourself into the vibrant culture of Phoenix by staying at Renaissance Phoenix Downtown Hotel. After experiencing the unique style of our newly reimagined lobby, unwind in your perfectly appointed accommodations, which seamlessly blend modern sophistication with second-home comfort.</p>
+					<a class="cta-button red carat large" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book your room online</a>
+				</div>
+				
 			</div>
+			
 			<div class="col lg-6 xl-7 map-col first-lg collapse">
 				<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/d4b7972f185e42cbbbafe9f342b85cf3.png"
 				 width="397" height="514" />
@@ -762,6 +748,15 @@
 							<a href="https://smartbridge.com/" target="_blank" class="sponsor-logo">
 								<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/168ea6c7d68d4012add4619e3c1f993d.png"
 								 alt="SmartBridge logo" width="334" height="99" />
+							</a>
+
+						</div>
+						
+						<div class="slide">
+
+							<a href="https://www.visualcrossing.com/" target="_blank" class="sponsor-logo">
+								<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2a902a05db6d4a7f9c6fd4c867ae9fd0.png"
+								 alt="Visual Crossing logo" />
 							</a>
 
 						</div>
