--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -53,9 +53,9 @@
                             <div class="text-filter-box">
                                 <i class="fa fa-pencil jplist-icon"></i>
 
-                                <!--[if lt IE 10]>
+                                <!-- [if lt IE 10]>
                                     <div class="jplist-label">Search:</div>
-                                <![endif]-->
+                                <![endif] -->
 
                                 <input data-path=".session-title"
                                         type="text"
@@ -113,6 +113,9 @@
                     <div class="row h-left">
                         <div id="view-options" class="col">
                             <button id="filter-btn" class="cta-button">Filter</button>
+                            <a href="#tuesday" class="cta-button tab-toggle col shrink current">Feb 5</a>
+                            <a href="#wednesday" class="cta-button tab-toggle col shrink">Feb 6</a>
+                            <a href="#thursday" class="cta-button tab-toggle col shrink">Feb 7</a>
                         </div>
                     </div>
 
@@ -123,17 +126,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="row collapse jp-lists">
-
-                        <div class="jplist-pagination col" data-control-type="pagination" data-control-name="paging"
-                            data-control-action="paging" data-items-per-page="15">&nbsp;</div>
-                        <div class="jplist-no-results jplist-hidden">
-                            <p>No results found</p>
-                        </div>
-
-                    </div>
-
 
                 </section>
             </div>
@@ -154,15 +146,19 @@
                                 </div>
 
                                 <div class="label-col ">
+                                    <!-- monday -->
                                     <div class="event-label">Education</div>
                                     <div class="event-label">Expo Hall &amp; Lounge</div>
+                                    <div class="event-label">Partner Forum</div>
+                                    <!-- Tuesday -->
                                     <div class="event-label">General Session</div>
                                     <div class="event-label">Sessions &amp; Workshops</div>
                                     <div class="event-label">Executive Forum</div>
                                     <div class="event-label">Women’s Networking Reception</div>
                                     <div class="event-label">Block Party</div>
-                                    <div class="event-label">Partner Forum</div>
+                                    <!-- Wednesday -->
                                     <div class="event-label">Futures Presentation</div>
+                                    <!-- monday through Wednesday -->
                                     <div class="event-label">Datathon</div>
                                 </div>
 
@@ -170,13 +166,13 @@
                                     <span class="event-title" title="Education">Education</span>
                                     <span class="event-title" title="Education">Education</span>
                                     <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Continental General Session">General Session</span>
                                     <span class="event-title" title="SessionsWorkshops">Sessions &amp; Workshops</span>
                                     <span class="event-title" title=" Executive Forum">Executive Forum</span>
-                                    <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s
-                                        Networking Reception</span>
+                                    <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking
+                                        Reception</span>
                                     <span class="event-title" title="Block Party">Block Party</span>
-                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Futures Presentation">Futures Presentation</span>
                                     <span class="event-title" title="Datathon">Datathon</span>
                                 </div>
@@ -198,23 +194,23 @@
 
                                 <div class="event-col">
                                     <span class="event-title" title="Education">Education</span>
-                                    <span class="event-title" title="General Session">General Session</span>
+                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
                                     <span class="event-title" title="Datathon">Datathon</span>
-
-                                    <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
+                                    
                                     <span class="event-title" title="Continental General Session">General Session</span>
+                                    <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
                                     <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
                                     <span class="event-title" title="Block Party">Block Party</span>
                                     <span class="event-title" title="Executive Forum">Executive Forum</span>
-                                    <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s
-                                        Networking Reception</span>
-                                    <span class="event-title" title="Datathon">Datathon</span>
-
+                                    <span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking
+                                        Reception</span>
+                                        <span class="event-title" title="Datathon">Datathon</span>
+                                        
+                                        <span class="event-title" title="General Session">General Session</span>
                                     <span class="event-title" title="Sessions &amp; Workshops">Sessions &amp; Workshops</span>
                                     <span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
                                     <span class="event-title" title="Futures Presentation">Futures Presentation</span>
-                                    <span class="event-title" title="Partner Forum">Partner Forum</span>
                                     <span class="event-title" title="Datathon">Datathon</span>
 
                                     <span class="event-title" title="Education">Education</span>
