--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -43,7 +43,8 @@
 					<div class="header-box education bullet-group">
 						<h3 class="h2 text-medium text-normal">Building a More Intelligent Enterprise: Best Practices for the Intelligence Director</h3>
 						<div class="special-event-box text-label red margin-top-10">Education event</div>
-						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into Intelligent Enterprises—capable of using data, people, and assets in aggregated and unique ways. In this class, you’ll evaluate where your organization stands today, understand how to establish a foundation for growth, and learn how to drive Business Intelligence adoption within your enterprise. The class will cover topics including data governance, process and change management, enterprise mobility, building your team, and empowering users.</p>
+						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into Intelligent Enterprises—capable of using data, people, and assets in aggregated and unique ways. In this class, you’ll evaluate where your organization stands today, understand how to establish a foundation for growth, and learn how to drive business intelligence adoption within your enterprise. This class will cover topics like data governance, process and change management, enterprise mobility, how to build your team, and how to empower users.</p>
+						<p>This course is ideal for those running a BI group&mdash;directors, VPs, and executives looking to establish a foundation for growing a successful enterprise with the MicroStrategy platform. Learn what a fully scalable Intelligent Enterprise can do when it’s aligned with corporate standards and staffed with experts using best practices in their daily work. Transform your BI and become a change advocate for intelligent, competitive analytics in your organization.</p>
 
 						<div class="row">
 							<div class="col lg-6">
