--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -87,7 +87,7 @@
                         <div class="col md-6">
                             <div class="card">
                                 <h3 class="text-normal h4">Datathon & Dossier Contests</h3>
-                                <p>The Datathon and Dossier Contest are our two most highly anticipated events. The Dossier Contest challenges individuals to build creative, intuitive, and transformative solutions. Winners will receive an iPhone Xs or Apple Watch! The Datathon is a team-based competition that will take place over the first two days of World. Contestants will compete to use MicroStrategy and a provided data-set to create an innovative solution and showcase their finished products. And the best part? The winning team will receive $10,000!</p>
+                                <p>The <a href="https://www.microstrategy.com/us/go/world-2019-datathon">Datathon</a> and <a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest">Dossier Contest</a> are our two most highly anticipated events. The Dossier Contest challenges individuals to build creative, intuitive, and transformative solutions. Winners will receive an iPhone Xs or Apple Watch! The Datathon is a team-based competition that will take place over the first two days of World. Contestants will compete to use MicroStrategy and a provided data-set to create an innovative solution and showcase their finished products. And the best part? <strong>The winning team will receive $10,000!</strong></p>
                             </div>
                         </div>
                     </div>
