WIP with places to visit section

--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -104,38 +104,69 @@
 			</div>
 		</section>
 
-		<section class="photo-mosaic no-padding">
-			<div class="row expand collapse photo-row tall">
-					<div class="col md-6">
-					<div class="photo grand-canyon height-jumbo">&nbsp;</div>
+		<section class="photo-mosaic no-padding background-navy">
+			<div class="row h-center">
+				<div class="col">
+					<h3 class="text-center text-normal">Places to check out while at World 2019:</h3>
+				</div>
+			</div>
+			<div class="row expand collapse photo-row short">
+				<div class="col md-6">
+					<div class="photo grand-canyon">&nbsp;</div>
 				</div>
 				<div class="col md-3">
-						<div class="col release photo sedona half">&nbsp;</div>
-						<div class="col release photo antelope-canyon half">&nbsp;</div>
+					<div class="col release photo grand-canyon2">&nbsp;</div>
 				</div>
 				<div class="col md-3">
-						<div class="col release photo tombstone half">&nbsp;</div>
-						<div class="col release photo phoenix-city half">&nbsp;</div>
+					<div class="col background-pattern pattern-split-circles height-x-small">&nbsp;</div>
+				</div>
+			</div>
+			<div class="row h-left photo-row short expand collapse">
+				<div class="col padding-20 md-6">
+						<h3>Grand Canyon</h3>
+						<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p> 
+				</div>
+				<div class="col md-3 release">
+						<div class="col background-pattern pattern-ribbon height-small">&nbsp;</div>
+					</div>
+					<div class="col md-3 release">
+						<div class="col release photo grand-canyon3">&nbsp;</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="background-navy section-stacked-bars">
+		<section class="photo-mosaic no-padding background-red">
+			<div class="row h-left photo-row short expand collapse">
+				<div class="col md-3 release">
+						<div class="col background-pattern pattern-round-dots height-small">&nbsp;</div>
+					</div>
+					<div class="col md-3 release">
+						<div class="col release photo sedona">&nbsp;</div>
+				</div>
+				<div class="col padding-20 md-6">
+						<h3>Sedona</h3>
+					<p>Tour the magical red rocks of Sedona and visit Native American ruins during this Sedona Red Rocks Tour from Phoenix.</p> 
+				</div>
+			</div>
+			<div class="row expand collapse photo-row short">
+				<div class="col md-3">
+					<div class="col release photo sedona2">&nbsp;</div>
+				</div>
+				<div class="col md-3">
+					<div class="col background-pattern pattern-squiggles height-x-small">&nbsp;</div>
+				</div>
+				<div class="col md-6">
+					<div class="photo sedona3">&nbsp;</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="background-black section-stacked-bars">
 			<!-- <div class="row h-left">
 				<div class="bullet-group">
 					<h3 class="text-uppercase text-normal marginup5">Things to Check Out</h3>
 				</div>
 			</div> -->
-			<div class="row">
-				<div class="col md-6">
-					<h3>Grand Canyon</h3>
-					<p>Take in unforgettable views of classic southwestern landscapes. Explore the Grand Canyon South Rim in this incredible tour from Phoenix that covers the deepest and widest parts of the Grand Canyon.</p> 
-				</div>
-				<div class="col md-6">
-					<h3>Sedona</h3>
-					<p>Tour the magical red rocks of Sedona and visit Native American ruins during this Sedona Red Rocks Tour from Phoenix.</p> 
-				</div>
-			</div>
 			<div class="row">
 				<div class="col md-4">
 					<h3>Antelope Canyon</h3>
