updated visual crossing logo size

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -807,7 +807,7 @@
 							
 							<div class="slide">
 
-								<a href="https://www.visualcrossing.com/" target="_blank" class="sponsor-logo">
+								<a href="https://www.visualcrossing.com/" target="_blank" class="sixteen-nine">
 									<img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2a902a05db6d4a7f9c6fd4c867ae9fd0.png"
 									alt="Visual Crossing logo" />
 								</a>
