commented out time filter

--- a/HTML/session-new.html
+++ b/HTML/session-new.html
@@ -72,12 +72,12 @@
 								<ul></ul>
 							</div>
 						</div>
-						<div class="col">
+						<!-- <div class="col">
 							<h5 class="text-uppercase text-bold time-label">Time</h5>
 							<div id="time-filter" class="jplist-group" data-control-type="checkbox-group-filter" data-control-name="time-filter" data-control-action="filter" data-no-selected-text="Time" data-one-item-text="{selected}" data-many-items-text="{num} selected">
 								<ul></ul>
 							</div>
-						</div>
+						</div> -->
 						<div class="col">
 							<h5 class="text-uppercase text-bold session-label">Session Type</h5>
 							<div id="session-filter" class="jplist-group" data-control-type="checkbox-group-filter" data-control-name="session-filter" data-control-action="filter" data-no-selected-text="All sessions" data-one-item-text="{selected}" data-many-items-text="{num} selected">
