AWS added as sponsor

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -39,6 +39,18 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
+                <a href="https://www.aws.amazon.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8d5b8eaac6f34bf287baf365d6f02509.png" alt="Amazon Web Services (AWS) logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Amazon Web Services (AWS)</h6>
+                <p><em>Company description coming soon!</em></p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
                 <a href="https://www.perficient.com/" target="_blank" class="ratio sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ed45aa4d60e49c78acd266fbe5b37ef.png" alt="Perficient logo">
                 </a>
@@ -298,13 +310,13 @@
         </div>
         <div class="row h-left">
             <div class="col lg-3 md-4">
-                <a href="https://www.visualcrossing.com/" target="_blank" class="ratio sixteen-nine">
+                <a href="https://www.visualcrossing.com/" target="_blank" class="sixteen-nine">
                     <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2a902a05db6d4a7f9c6fd4c867ae9fd0.png" alt="Visual Crossing logo">
                 </a>
             </div>
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Visual Crossing</h6>
-                <p><em>Company description coming soon!</em></p>
+                <p>Visual Crossing, the premier MicroStrategy mapping partner for over 15 years, is proud to unveil Weather Analytics for MicroStrategy.  Deliver the power of weather and climate analysis to your business intelligence solution.  Score your business data against historical weather patterns and use predictive analytics to respond to forecasted weather events.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
